--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -185,7 +185,6 @@ voor alle $(x,y)$ in $[0,1]^2$. Figuur~\ref{fig:grafieken_normen} toont de corre
 grafieken.
 
 \begin{figure}[bp]
-\caption{\label{fig:grafieken_normen}De grafiek voor (a) $T_M$, (b) $S_M$, (c) $T_P$ en (d) $S_P$.}
 \vspace{5pt}
 \centering
 \subfigure[]{
@@ -201,6 +200,8 @@ grafieken.
 \includegraphics[width=0.48\textwidth]{images/s_p.eps}
 }
 \vspace{5pt}
+\caption{\label{fig:grafieken_normen}De grafiek voor (a) $T_M$, (b) $S_M$, (c) $T_P$ en 
+(d) $S_P$.}
 \end{figure}
 
 We kunnen de bovenstaande operatoren nu gebruiken om de klassieke verzameltechnische bewerkingen 
@@ -323,7 +324,6 @@ Alle vaagsimilariteitsmaten uit die tabel zijn reflexief en symmetrisch. Dat wil
 voor elke maat $M$ geldt: $M(A,A)=1$ en $M(A,B)=M(B,A)$. 
 
 \begin{table}[bp]
-\caption{\label{tab:similatiteitsmaten}De vaagsimilariteitsmaten die we gaan gebruiken.}
 \vspace{10pt}
 \centering
 \begin{tabular}{l}
@@ -384,8 +384,8 @@ $
 \end{tabular}
 \vspace{10pt}
 %\end{center}
+\caption{\label{tab:similatiteitsmaten}De vaagsimilariteitsmaten die we gaan gebruiken.}
 \end{table}
-
 
 
 \section{Aggregatieoperatoren} 
