--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -26,7 +26,6 @@ situatie: hoe meer informatie beschikbaar komt, hoe moeilijker het wordt
 om binnen een redelijke tijd accurate informatie te vinden. Zoekmachines zijn momenteel
 de meest gebruikte online service, met miljoenen zoekopdrachten per dag. Naast het zoeken
 in teksten, groeit de aandacht voor zogenaamde multimedia zoeksystemen. 
-
 In het bijzonder maken internetgebruikers steeds meer gebruik van zoekmachines die toelaten om 
 gigantische collecties van beelden te doorzoeken. Die zoekmachines zijn echter nagenoeg 
 allemaal tekstgebaseerd. Dat houdt in dat het zoeken enkel steunt op het vergelijken van opgegeven 
@@ -40,20 +39,23 @@ opgelost worden. De bestaande inhoudgebaseerde zoeksystemen zijn echter nog alti
 in staat beeldencollecties van zeer grote omvang te doorzoeken. In deze scriptie geven 
 we daarom een alternatief voor die inhoudgebaseerde systemen, waarbij de grootte van 
 de te doorzoeken collectie geen probleem vormt. 
-
 Dat alternatief kan gezien worden als een uitbreiding van de tekstgebaseerde zoeksystemen.
 De zoekactie begint nog steeds met het specificeren van \'e\'en of meerdere trefwoorden, waarop
 het systeem antwoordt met een lijst van relevante beelden. We zorgen er nu echter voor
 dat de gebruiker een aantal voorbeelden kan kiezen uit die lijst, waarna het
 systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voorbeelden uitbuit.
 
-Voor het modelleren van de graduele gelijkenis tussen beelden, maken we gebruik van 
-vaagsimilariteitsmaten. Daarnaast zullen we ook nog beroep doen op aggregatieoperatoren,
-zowel voor het combineren van verschillende similariteitsmaten als voor het ondersteunen van
-meerdere voorbeelden. 
+Het uiteindelijke doel van die afstudeerwerk, is de bouw van een prototype dat
+het similariteitsgebaseerd rangschikken van de zoekresultaten implementeert.
+Voor het modelleren van de graduele gelijkenis tussen beelden, maken we daarbij gebruik van 
+vaagsimilariteitsmaten. Om meerdere voorbeelden te ondersteunen, zullen we daarnaast
+ook nog beroep doen op aggregatieoperatoren.
+%Daarnaast zullen we ook nog beroep doen op aggregatieoperatoren,
+%zowel voor het combineren van verschillende similariteitsmaten als voor het ondersteunen van
+%meerdere voorbeelden. 
 %\vspace{5mm}
 
 %\noindent {\bf\Large Trefwoorden}\\[1mm]
 \section*{Trefwoorden}
-content-based image retrieval, vaagverzamelingen, similariteitsmaten, aggregatieoperatoren
+content-based image retrieval, similariteitsmaten, vaagverzamelingen, aggregatieoperatoren
 
