--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -323,7 +323,7 @@ de similariteitsmaten die worden weergegeven in tabel~\ref{tab:similatiteitsmate
 Alle vaagsimilariteitsmaten uit die tabel zijn reflexief en symmetrisch. Dat wil zeggen dat 
 voor elke maat $M$ geldt: $M(A,A)=1$ en $M(A,B)=M(B,A)$. 
 
-\begin{table}[bp]
+\begin{table}[!bp]
 \vspace{10pt}
 \centering
 \begin{tabular}{l}
