--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -299,7 +299,7 @@ vinden we bovendien:
 \end{array}
 \end{displaymath}
 We kunnen tabel~\ref{tab:similatiteitsmaten} bijgevolg herschrijven tot tabel~\ref{tab:beperkte_similatiteitsmaten}.
-\begin{table}[bp]
+\begin{table}[!bp]
 \vspace{10pt}
 \centering
 \begin{tabular}{l}
